@@ -1,7 +1,12 @@
 2012-12-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCCbtree.cc:
+	  Special handling for parameters in btree-based stack allocation.
+
+2012-12-19 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* src/SDCCralloc.hpp:
-	  Send error message about invalid root to crr instead of cout.
+	  Send error message about invalid root to cerr instead of cout.
 
 2012-12-19 Borut Razem <borut.razem AT gmail.com>
 
